@@ -126,7 +126,7 @@
 #
 #TLS_ON
 
-# Alias db file.
+# Default alias DB file.  If no filename is given, default DB is disabled.
 #
 #ALIAS_DB			/etc/alias.db
 
@@ -197,8 +197,32 @@
 #
 #SASL_ON
 
+#
+# @domain RED (Receive Expand Deliver) rules
+#
+
+#
+# Receive and Expand rules
+#
+# @domain TYPE EXPANSION_TYPE [ FILENAME ]
+#
+# TYPE can be either 'r' or 'R', and E.  The 'R' is for a Sufficient action.
+# If a Recipient is found in a Sufficient EXPANSION_TYPE, no further
+# actions are tried and the user is accepted.  The 'r' is for a Required
+# action.  If a user is not found in a Required EXPANSION_TYPE, no further
+# actions are tried and the user is rejected.  E denotes a resource to be
+# used during the expansion phase.
+#
+# Rule precedence occurs in the same order given in the config file.
+#
+# Defaults for the local host.  If any for the local domain are defined, the
+# defaults are not implicitly added.
+#
+# @localhost RE ALIAS
+# @localhost RE PASSWORD
+
 # Call a defined binary for delivery of a domain's mail.
 # Special args: $S Sender, $R recipient, $D domain
 # Data of message will be on standard input.
 #
-#@hostname			D	/path/to/binary [ args ]
+# @hostname			D	/path/to/binary [ args ]
