@@ -91,7 +91,6 @@ extern unsigned int			simta_bounce_seconds;
 extern int				simta_simsend_strict_from;
 extern int				simta_exp_level_max;
 extern int				simta_process_type;
-extern int				simta_use_alias_db;
 extern int				simta_umich_imap_letters;
 extern int				simta_filesystem_cleanup;
 extern int				sitma_smtp_extension;
@@ -144,7 +143,8 @@ extern char				*simta_rbl_url;
 extern char				*simta_user_rbl_domain;
 extern char				*simta_user_rbl_url;
 extern char				*simta_queue_filter;
-extern char				*simta_file_alias_db;
+extern char				*simta_default_alias_db;
+extern char				*simta_default_passwd_file;
 extern char				*simta_file_ca;
 extern char				*simta_file_cert;
 extern char				*simta_file_private_key;
